@@ -11,13 +11,13 @@
  */
 package org.mini2Dx.desktop.playerdata;
 
-import java.io.InputStreamReader;
-import java.io.StringWriter;
+import java.io.*;
 import java.nio.file.Paths;
 
 import org.mini2Dx.core.Mdx;
 import org.mini2Dx.core.playerdata.PlayerData;
 import org.mini2Dx.core.playerdata.PlayerDataException;
+import org.mini2Dx.core.serialization.GameDataSerializable;
 import org.mini2Dx.core.serialization.SerializationException;
 import org.mini2Dx.natives.OsInformation;
 
@@ -67,12 +67,15 @@ public class DesktopPlayerData implements PlayerData {
 			throw new PlayerDataException("No file path specified");
 		}
 		try {
-			return Mdx.xml.fromXml(new InputStreamReader(resolve(filepath)
-					.read()), clazz);
+			final InputStream inputStream = resolve(filepath).read();
+			final T result = Mdx.xml.fromXml(new InputStreamReader(inputStream), clazz);
+			inputStream.close();
+			return result;
 		} catch (SerializationException e) {
 			throw new PlayerDataException(e);
+		} catch (IOException e) {
+			throw new PlayerDataException(e);
 		}
-
 	}
 
 	@Override
@@ -87,10 +90,12 @@ public class DesktopPlayerData implements PlayerData {
 			Mdx.xml.toXml(object, writer);
 			resolve(filepath).writeString(writer.toString(), false);
 			writer.flush();
+			writer.close();
 		} catch (SerializationException e) {
 			throw new PlayerDataException(e);
+		} catch (IOException e) {
+			throw new PlayerDataException(e);
 		}
-
 	}
 
 	@Override
@@ -142,6 +147,39 @@ public class DesktopPlayerData implements PlayerData {
 		try {
 			FileHandle file = resolve(filepath);
 			file.writeString(content, false);
+		} catch (Exception e) {
+			throw new PlayerDataException(e);
+		}
+	}
+
+	@Override
+	public <T extends GameDataSerializable> void readBytes(T result, String... filepath)
+			throws PlayerDataException {
+		if (filepath.length == 0) {
+			throw new PlayerDataException("No file path specified");
+		}
+		try {
+			FileHandle file = resolve(filepath);
+			final InputStream inputStream = file.read();
+			result.readData(new DataInputStream(inputStream));
+			inputStream.close();
+		} catch (Exception e) {
+			throw new PlayerDataException(e);
+		}
+	}
+
+	@Override
+	public <T extends GameDataSerializable> void writeBytes(T obj, String... filepath)
+			throws PlayerDataException {
+		if (filepath.length == 0) {
+			throw new PlayerDataException("No file path specified");
+		}
+		try {
+			FileHandle file = resolve(filepath);
+			final OutputStream outputStream = file.write(false);
+			obj.writeData(new DataOutputStream(outputStream));
+			outputStream.flush();
+			outputStream.close();
 		} catch (Exception e) {
 			throw new PlayerDataException(e);
 		}
